# sensorium

./: .gitignore  CMakeLists.txt  README.md  configure.bat  configure.sh  distclean.sh  imgui.ini  run.bat  run.sh
data/co2/: 1990_2020.csv  2003_2013.csv  label.txt
data/nasa/carbon/: README.md
data/nasa/sst/: README.md
data/presets/: 1.preset  2.preset  3.preset  default.presetMap  sensorium.sequence  test.sequence
src/: AppState.hpp  AudioPlayer.cpp  AudioPlayer.hpp  FileWatcher.cpp  FileWatcher.hpp  OceanDataViewer.cpp  OceanDataViewer.hpp  ShaderManager.cpp  ShaderManager.hpp  VideoPlayer.cpp  VideoPlayer.hpp  __main.cpp  headers.hpp  main.cpp  main_ba.cpp
src/shaders/: co2.frag  colormap.frag  common.vert  data.frag  mono.vert  space.frag  sphere.frag  stereo.vert  tex.vert  video.frag
